Fixed background clipping in image select

--- a/src/main/resources/static/css/account.css
+++ b/src/main/resources/static/css/account.css
@@ -17,41 +17,37 @@ form > p {
     display: flex;
     gap: 2em;
     margin: 0 0 1em;
-    align-items: center;
-}
-
-#profile {
-    width: 74px;
     height: 74px;
-    border-radius: var(--border-radius);
-    border: var(--border);
-    background: var(--background);
+    align-items: stretch;
+}
+
+#picture {
     position: relative;
+    flex-basis: 74px;
+    display: flex;
 }
 
-#profile > label {
-    position: absolute;
-    height: 100%;
-    width: 100%;
+#picture > label {
+    flex: 1;
+    border: var(--border);
     border-radius: var(--border-radius);
+    background: var(--background);
+    overflow: hidden;
     cursor: pointer;
-}
-
-#profile > input {
-    display: none;
-}
-
-#profile > img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    pointer-events: none;
-    border-radius: var(--border-radius);
     transition: 0.3s filter ease-in-out;
 }
 
-#profile:hover img {
+#picture > input {
+    display: none;
+}
+
+#picture img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+#picture > label:hover {
     filter: brightness(0.7);
 }
 
